...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Cardio Diary" id="BYZ-38-t0r" customClass="HomeViewController" customModule="CardioDiary" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
...
                                </constraints>
                                <inset key="contentEdgeInsets" minX="6" minY="4" maxX="6" maxY="4"/>
                                <state key="normal" title="Start Workout">
                                    <color key="titleColor" white="0.20184151785714285" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <inset key="contentEdgeInsets" minX="0.0" minY="4" maxX="0.0" maxY="4"/>
                                <state key="normal" title="Cardio History">
                                    <color key="titleColor" white="0.20184151785714285" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <inset key="contentEdgeInsets" minX="0.0" minY="4" maxX="0.0" maxY="4"/>
                                <state key="normal" title="Goals">
                                    <color key="titleColor" white="0.20184151785714285" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are # hrs from your goal. " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2j-54-zUp">
                                <rect key="frame" x="30" y="372.5" width="315" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="goals"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.2031156994047619" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zi0-RT-86L">
                                <rect key="frame" x="146.5" y="268" width="83" height="23.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="welcome"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your last workout was:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5s4-Gc-v8J">
                                <rect key="frame" x="30" y="321.5" width="315" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="workout"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.2031156994047619" alpha="1" colorSpace="calibratedWhite"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e97-TR-6N8">
                                <rect key="frame" x="154.5" y="173" width="66" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="duration"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.20294828869047618" alpha="1" colorSpace="calibratedWhite"/>
...
                                <rect key="frame" x="0.0" y="333.5" width="375" height="333.5"/>
                            </mapView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Heart Rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F18-Os-gy0">
                                <rect key="frame" x="146" y="259" width="83" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="heartRate"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.20294828869047618" alpha="1" colorSpace="calibratedWhite"/>
...
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <barButtonItem title="Done" id="T0G-cj-XYZ">
                                        <connections>
                                            <action selector="done:" destination="gWG-ff-Jog" id="OBN-rN-ee9"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="4" maxX="0.0" maxY="4"/>
                                <state key="normal" title="Check Heart Rate">
                                    <color key="titleColor" white="0.20000000000000001" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SgG-sZ-t4U">
                                <rect key="frame" x="77" y="178" width="45" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="goalEntry"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="45" id="VR8-UP-aHo"/>
...
