...
	@IBAction func startCardio(_ sender: UIButton) {
		
		if durationTimer == nil {
			
			// start running
			locationManager.startUpdatingLocation()
			startButton.setTitle("End Workout", for: .normal)
			startDate = Date()
			runDistance = 0.0
			
			durationTimer = Timer.scheduledTimer(timeInterval: 0.5, target: self, selector: #selector(updateDuration), userInfo: nil, repeats: true)
		}
		else {
...
		})
		
		okAction.isEnabled = false
		
		alertController.addAction(okAction)
		alertController.addTextField(configurationHandler: { (textField) in
			textField.placeholder = "Number of Beats"
			textField.keyboardType = .numberPad
			
			NotificationCenter.default.addObserver(forName: NSNotification.Name.UITextFieldTextDidChange, object: textField, queue: OperationQueue.main, using: { (notification) in
				if let text = textField.text {
					okAction.isEnabled = !text.isEmpty
				} else {
...
